# cheburcheck

./: Cargo.toml  Cross.toml  Dockerfile  README.md  Rocket.toml  dist-domains.txt  website.Dockerfile
.github/workflows/: build.yml
querying/: Cargo.toml
querying/src/: geoip.rs  lib.rs  lists.rs  resolver.rs  target.rs  updater.rs
reporter/: Cargo.toml  README.md  build.rs
reporter/debian/: cheburchecker.100k.timer  cheburchecker.1kk.timer  cheburchecker@.service
reporter/src/: counter.rs  main.rs  resolver.rs
reports/: Cargo.toml
reports/src/: lib.rs
src/: geoip.rs  lists.rs  main.rs  resolver.rs  target.rs  updater.rs
static/: main.css
templates/: base.html.tera  empty.html.tera  index.html.tera  page.html.tera  result.html.tera  typography.html.tera
website/: Cargo.toml  Rocket.toml  build.rs
website/migrations/: 20251207232812_initial_migration.sql
website/src/: agency.rs  db.rs  main.rs  whitelist.rs
website/static/: main.css
website/templates/: base.html.tera  empty.html.tera  error.html.tera  histogram.html.tera  index.html.tera  result.html.tera  search-form.html.tera
website/templates/pages/: faq.html.tera  test.html.tera  whitelist.html.tera
