[package]
name = "reporter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
reports = { path = "../reports" }
anyhow = "1.0"
env_logger = "0.11.8"
futures = "0.3"
clap = { version = "4.5.53", features = ["derive", "env"] }
csv = "1.4.0"
indicatif = "0.18.3"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"

[build-dependencies]
reqwest = { workspace = true }
getrandom = "0.3.4"
