[package]
name = "website"
version = "0.1.4"
edition = "2024"

[dependencies]
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1", features = ["derive"] }
querying = { path = "../querying" }
env_logger = "0.11.8"
rocket-cache-response = "0.6.4"
log = { workspace = true }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
tar = "0.4"
flate2 = "1.0"
